# souzoku

./: README.md  main.py  main2.py  main3.py  pyproject.toml  requirements.txt  watchers.xml
.ssh/: ls  ls.pub
app/: body.py  database_utils.py  example.db  header.py  layout.py  state.py  test.py  utils.py
app/controllers/: controllers.py
app/models/: __init__.py  models.py
app/views/: settings_view.py  views.py
backup/: controllers.py  settings_views.py  sideber.py  views.py
config/: config.ini  config.py
database/: inheritance.db
src/souzoku/: __init__.py
tests/: app.py  config.py  customer_bank_db.db  database.py  main.py  models.py  test_.py  ui_tabs.py
