[project]
name = "souzoku"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "selenium>=4.24.0",
    "flet>=0.24.1",
    "pandas>=2.2.2",
    "pypdf>=4.3.1",
    "reportlab>=4.2.2",
    "pdfminer>=20191125",
    "pyautogui>=0.9.54",
    "jaconv>=0.4.0",
    "mojimoji>=0.0.13",
    "zengin-code>=1.1.0.20240904",
    "bs4>=0.0.2",
    "pypdf2>=3.0.1",
    "pandas-datareader>=0.10.0",
    "setuptools>=65",
    "xlwings>=0.32.2",
    "pdf2image>=1.17.0",
    "ruff>=0.6.5",
    "openpyxl>=3.1.5",
    "docx>=0.2.4",
    "pyinstaller>=6.11.1",
    "sqlalchemy>=2.0.36",
    "webdriver-manager>=4.0.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
    "flake8>=7.3.0",
    "black>=25.1.0",
    "mypy>=1.17.1",
    "isort>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/souzoku"]
